--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: emerge_alert_dialog
-description: An emerge alert dialog package in Dart is a package that allows developers to easily create and display alert dialogs with custom animations. Emerge dialogs are used to display important information or messages to the user and often include a call to action, such as a button to confirm or dismiss the dialog.
+description: An emerge alert dialog is allows developers to easily create and display alert dialogs with custom animations.
 
 version: 0.0.2
 
